--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 /* root */
 #root {
   width: 100%;
@@ -53,12 +14,7 @@ ul {
   display: inline-block;
 }
 
-/* all li */
-/* li {
-  border-bottom: 1px black;
-} */
-
-/* login and signup container */
+/* login and register container */
 .login,
 .register {
   background-color: white;
