--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,3 +60,14 @@ ul {
   width: 50%;
   height: 100%;
 }
+
+/* Not Found Page */
+.not-found-msg {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center; /* vertical y-axis */
+  justify-content: center; /* horizontal x-axis */
+  font-weight: bold;
+  font-size: 5vw;
+}
